fix: added more readability of form block labels

--- a/theme/ItaliaTheme/Blocks/_form.scss
+++ b/theme/ItaliaTheme/Blocks/_form.scss
@@ -63,6 +63,7 @@
     input[type='radio'] ~ label {
       overflow: inherit;
       height: auto;
+      margin: 1px 0;
       line-height: 30px;
       white-space: normal;
     }
